[gd_scene load_steps=10 format=4 uid="uid://bh2c3tqr6mxhh"]

[ext_resource type="Script" path="res://Scripts/ChapterBattle.gd" id="1_usvja"]
[ext_resource type="TileSet" uid="uid://dhpm4aemdlwfi" path="res://Tilesets/forest.tres" id="2_nuju3"]
[ext_resource type="Script" path="res://Scripts/UnitGrid.gd" id="3_52egx"]
[ext_resource type="Texture2D" uid="uid://bkgi1kjten1uk" path="res://Sprites/Overworld/selection.png" id="4_7qgnb"]
[ext_resource type="Script" path="res://Scripts/MapCursor.gd" id="5_ef3eq"]
[ext_resource type="Theme" uid="uid://dyye235a7qia8" path="res://Theme/theme.tres" id="7_ob44a"]
[ext_resource type="Script" path="res://Scripts/MoveSelectPanel.gd" id="8_txwea"]
[ext_resource type="PackedScene" uid="uid://dhmvd1yco0p2l" path="res://Scenes/UI/MoveOption.tscn" id="9_dodco"]
[ext_resource type="PackedScene" uid="uid://c4ojdylljxwvf" path="res://Scenes/UI/HoritzontalUnitPreview.tscn" id="13_cxd6n"]

[node name="ChapterBattle" type="Control" node_paths=PackedStringArray("allied_unit_preview", "enemy_unit_preview", "move_select_panel", "unit_grid", "map_cursor", "range_display_grid", "move_path_line", "attack_path_line")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_ob44a")
script = ExtResource("1_usvja")
allied_unit_preview = NodePath("UnitPreviews/AlliedUnitPreview")
enemy_unit_preview = NodePath("UnitPreviews/EnemyUnitPreview")
move_select_panel = NodePath("MoveSelectPanel")
unit_grid = NodePath("Map/UnitGrid")
map_cursor = NodePath("Map/MapCursor")
range_display_grid = NodePath("Map/RangeDisplayGrid")
move_path_line = NodePath("Map/MovePathLine")
attack_path_line = NodePath("Map/AttackPathLine")

[node name="Map" type="Node2D" parent="."]
editor_description = "For anything that needs to move relative to the map"
position = Vector2(384, 48)

[node name="FloorTiles" type="TileMapLayer" parent="Map"]
z_index = -5
position = Vector2(-32, -32)
tile_map_data = PackedByteArray("AAAhABwAAAAAAAAAAAAfAB8AAAAAAAAAAAAgAB4AAAAAAAAAAAAgAB0AAAAAAAAAAAAAAAAAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAJAAAAAgAAAAAAAAAKAAAAAgAAAAAAAAALAAAAAgAAAAAAAAAMAAAAAgAAAAAAAAANAAAAAgAAAAAAAAAOAAAAAgAAAAAAAAAPAAAAAgAAAAAAAAAQAAAAAgAAAAAAAAARAAAAAgAAAAAAAAASAAAAAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAASAA0AAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgAAAAAAAAACAAEAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAADAA0AAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAAAAAAFAA0AAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA0AAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAwAAgAAAAAAAAAHAA0AAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA0AAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA0AAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA0AAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAALAAwAAgAAAAAAAAALAA0AAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAANAAoAAgAAAAAAAAANAAsAAgAAAAAAAAANAAwAAgAAAAAAAAANAA0AAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAcAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA0AAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAMAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAARAAwAAgAAAAAAAAARAA0AAgAAAAAAAAA=")
tile_set = ExtResource("2_nuju3")

[node name="WallTiles" type="TileMapLayer" parent="Map"]
z_index = -5
position = Vector2(-32, -32)
tile_map_data = PackedByteArray("AAAhABwAAAAAAAAAAAAfAB8AAAAAAAAAAAAgAB4AAAAAAAAAAAAgAB0AAAAAAAAAAAD6//7/AgABAAAAAAD6////AgABAAAAAAD6/wAAAgABAAAAAAD6/wEAAgABAAAAAAD6/wIAAgABAAAAAAD6/wMAAgABAAAAAAD6/wQAAgABAAAAAAD6/wUAAgABAAAAAAD6/wYAAgABAAAAAAD6/wcAAgABAAAAAAD6/wgAAgABAAAAAAD6/wkAAgABAAAAAAD6/woAAgABAAAAAAD6/wsAAgABAAAAAAD6/wwAAgABAAAAAAD6/w0AAgABAAAAAAD6/w4AAgABAAAAAAD6/w8AAgABAAAAAAD7//7/AgABAAAAAAD7////AgABAAAAAAD7/wAAAgABAAAAAAD7/wEAAgABAAAAAAD7/wIAAgABAAAAAAD7/wMAAgABAAAAAAD7/wQAAgABAAAAAAD7/wUAAgABAAAAAAD7/wYAAgABAAAAAAD7/wcAAgABAAAAAAD7/wgAAgABAAAAAAD7/wkAAgABAAAAAAD7/woAAgABAAAAAAD7/wsAAgABAAAAAAD7/wwAAgABAAAAAAD7/w0AAgABAAAAAAD7/w4AAgABAAAAAAD7/w8AAgABAAAAAAD8//7/AgABAAAAAAD8////AgABAAAAAAD8/wAAAgABAAAAAAD8/wEAAgABAAAAAAD8/wIAAgABAAAAAAD8/wMAAgABAAAAAAD8/wQAAgABAAAAAAD8/wUAAgABAAAAAAD8/wYAAgABAAAAAAD8/wcAAgABAAAAAAD8/wgAAgABAAAAAAD8/wkAAgABAAAAAAD8/woAAgABAAAAAAD8/wsAAgABAAAAAAD8/wwAAgABAAAAAAD8/w0AAgABAAAAAAD8/w4AAgABAAAAAAD8/w8AAgABAAAAAAD9//7/AgABAAAAAAD9////AgABAAAAAAD9/wAAAgABAAAAAAD9/wEAAgABAAAAAAD9/wIAAgABAAAAAAD9/wMAAgABAAAAAAD9/wQAAgABAAAAAAD9/wUAAgABAAAAAAD9/wYAAgABAAAAAAD9/wcAAgABAAAAAAD9/wgAAgABAAAAAAD9/wkAAgABAAAAAAD9/woAAgABAAAAAAD9/wsAAgABAAAAAAD9/wwAAgABAAAAAAD9/w0AAgABAAAAAAD9/w4AAgABAAAAAAD9/w8AAgABAAAAAAD+//7/AgABAAAAAAD+////AgABAAAAAAD+/wAAAgABAAAAAAD+/wEAAgABAAAAAAD+/wIAAgABAAAAAAD+/wMAAgABAAAAAAD+/wQAAgABAAAAAAD+/wUAAgABAAAAAAD+/wYAAgABAAAAAAD+/wcAAgABAAAAAAD+/wgAAgABAAAAAAD+/wkAAgABAAAAAAD+/woAAgABAAAAAAD+/wsAAgABAAAAAAD+/wwAAgABAAAAAAD+/w0AAgABAAAAAAD+/w4AAgABAAAAAAD+/w8AAgABAAAAAAD///7/AgABAAAAAAD/////AgABAAAAAAD//wAAAgABAAAAAAD//wEAAgABAAAAAAD//wIAAgABAAAAAAD//wMAAgABAAAAAAD//wQAAgABAAAAAAD//wUAAgABAAAAAAD//wYAAgABAAAAAAD//wcAAgABAAAAAAD//wgAAgABAAAAAAD//wkAAgABAAAAAAD//woAAgABAAAAAAD//wsAAgABAAAAAAD//wwAAgABAAAAAAD//w0AAgABAAAAAAD//w4AAgABAAAAAAD//w8AAgABAAAAAAAAAP7/AgABAAAAAAAAAP//AgABAAAAAAABAP7/AgABAAAAAAABAP//AgABAAAAAAACAP7/AgABAAAAAAACAP//AgABAAAAAAADAP7/AgABAAAAAAADAP//AgABAAAAAAAEAP7/AgABAAAAAAAEAP//AgABAAAAAAAFAP7/AgABAAAAAAAFAP//AgABAAAAAAAGAP7/AgABAAAAAAAGAP//AgABAAAAAAAHAP7/AgABAAAAAAAHAP//AgABAAAAAAAIAP7/AgABAAAAAAAIAP//AgABAAAAAAAJAP7/AgABAAAAAAAJAP//AgABAAAAAAAKAP7/AgABAAAAAAAKAP//AgABAAAAAAALAP7/AgABAAAAAAALAP//AgABAAAAAAAMAP7/AgABAAAAAAAMAP//AgABAAAAAAANAP7/AgABAAAAAAANAP//AgABAAAAAAAOAP7/AgABAAAAAAAOAP//AgABAAAAAAAPAP7/AgABAAAAAAAPAP//AgABAAAAAAAQAP7/AgABAAAAAAAQAP//AgABAAAAAAARAP7/AgABAAAAAAARAP//AgABAAAAAAASAP7/AgABAAAAAAASAP//AgABAAAAAAATAP7/AgABAAAAAAATAP//AgABAAAAAAAUAP7/AgABAAAAAAAUAP//AgABAAAAAAAVAP7/AgABAAAAAAAVAP//AgABAAAAAAAWAP7/AgABAAAAAAAWAP//AgABAAAAAAAXAP7/AgABAAAAAAAXAP//AgABAAAAAAAYAP7/AgABAAAAAAAYAP//AgABAAAAAAATAAAAAgABAAAAAAATAAEAAgABAAAAAAATAAIAAgABAAAAAAATAAMAAgABAAAAAAATAAQAAgABAAAAAAATAAUAAgABAAAAAAATAAYAAgABAAAAAAATAAcAAgABAAAAAAATAAgAAgABAAAAAAATAAkAAgABAAAAAAATAAoAAgABAAAAAAATAAsAAgABAAAAAAATAAwAAgABAAAAAAATAA0AAgABAAAAAAATAA4AAgABAAAAAAATAA8AAgABAAAAAAAUAAAAAgABAAAAAAAUAAEAAgABAAAAAAAUAAIAAgABAAAAAAAUAAMAAgABAAAAAAAUAAQAAgABAAAAAAAUAAUAAgABAAAAAAAUAAYAAgABAAAAAAAUAAcAAgABAAAAAAAUAAgAAgABAAAAAAAUAAkAAgABAAAAAAAUAAoAAgABAAAAAAAUAAsAAgABAAAAAAAUAAwAAgABAAAAAAAUAA0AAgABAAAAAAAUAA4AAgABAAAAAAAUAA8AAgABAAAAAAAVAAAAAgABAAAAAAAVAAEAAgABAAAAAAAVAAIAAgABAAAAAAAVAAMAAgABAAAAAAAVAAQAAgABAAAAAAAVAAUAAgABAAAAAAAVAAYAAgABAAAAAAAVAAcAAgABAAAAAAAVAAgAAgABAAAAAAAVAAkAAgABAAAAAAAVAAoAAgABAAAAAAAVAAsAAgABAAAAAAAVAAwAAgABAAAAAAAVAA0AAgABAAAAAAAVAA4AAgABAAAAAAAVAA8AAgABAAAAAAAWAAAAAgABAAAAAAAWAAEAAgABAAAAAAAWAAIAAgABAAAAAAAWAAMAAgABAAAAAAAWAAQAAgABAAAAAAAWAAUAAgABAAAAAAAWAAYAAgABAAAAAAAWAAcAAgABAAAAAAAWAAgAAgABAAAAAAAWAAkAAgABAAAAAAAWAAoAAgABAAAAAAAWAAsAAgABAAAAAAAWAAwAAgABAAAAAAAWAA0AAgABAAAAAAAWAA4AAgABAAAAAAAWAA8AAgABAAAAAAAXAAAAAgABAAAAAAAXAAEAAgABAAAAAAAXAAIAAgABAAAAAAAXAAMAAgABAAAAAAAXAAQAAgABAAAAAAAXAAUAAgABAAAAAAAXAAYAAgABAAAAAAAXAAcAAgABAAAAAAAXAAgAAgABAAAAAAAXAAkAAgABAAAAAAAXAAoAAgABAAAAAAAXAAsAAgABAAAAAAAXAAwAAgABAAAAAAAXAA0AAgABAAAAAAAXAA4AAgABAAAAAAAXAA8AAgABAAAAAAAYAAAAAgABAAAAAAAYAAEAAgABAAAAAAAYAAIAAgABAAAAAAAYAAMAAgABAAAAAAAYAAQAAgABAAAAAAAYAAUAAgABAAAAAAAYAAYAAgABAAAAAAAYAAcAAgABAAAAAAAYAAgAAgABAAAAAAAYAAkAAgABAAAAAAAYAAoAAgABAAAAAAAYAAsAAgABAAAAAAAYAAwAAgABAAAAAAAYAA0AAgABAAAAAAAYAA4AAgABAAAAAAAYAA8AAgABAAAAAAAAAA4AAgABAAAAAAAAAA8AAgABAAAAAAABAA4AAgABAAAAAAABAA8AAgABAAAAAAACAA4AAgABAAAAAAACAA8AAgABAAAAAAADAA4AAgABAAAAAAADAA8AAgABAAAAAAAEAA4AAgABAAAAAAAEAA8AAgABAAAAAAAFAA4AAgABAAAAAAAFAA8AAgABAAAAAAAGAA4AAgABAAAAAAAGAA8AAgABAAAAAAAHAA4AAgABAAAAAAAHAA8AAgABAAAAAAAIAA4AAgABAAAAAAAIAA8AAgABAAAAAAAJAA4AAgABAAAAAAAJAA8AAgABAAAAAAAKAA4AAgABAAAAAAAKAA8AAgABAAAAAAALAA4AAgABAAAAAAALAA8AAgABAAAAAAAMAA4AAgABAAAAAAAMAA8AAgABAAAAAAANAA4AAgABAAAAAAANAA8AAgABAAAAAAAOAA4AAgABAAAAAAAOAA8AAgABAAAAAAAPAA4AAgABAAAAAAAPAA8AAgABAAAAAAAQAA4AAgABAAAAAAAQAA8AAgABAAAAAAARAA4AAgABAAAAAAARAA8AAgABAAAAAAASAA4AAgABAAAAAAASAA8AAgABAAAAAAD2//r/AgABAAAAAAD2//v/AgABAAAAAAD2//z/AgABAAAAAAD2//3/AgABAAAAAAD2//7/AgABAAAAAAD2////AgABAAAAAAD2/wAAAgABAAAAAAD2/wEAAgABAAAAAAD2/wIAAgABAAAAAAD2/wMAAgABAAAAAAD2/wQAAgABAAAAAAD2/wUAAgABAAAAAAD2/wYAAgABAAAAAAD2/wcAAgABAAAAAAD2/wgAAgABAAAAAAD2/wkAAgABAAAAAAD2/woAAgABAAAAAAD2/wsAAgABAAAAAAD2/wwAAgABAAAAAAD2/w0AAgABAAAAAAD2/w4AAgABAAAAAAD2/w8AAgABAAAAAAD2/xAAAgABAAAAAAD2/xEAAgABAAAAAAD2/xIAAgABAAAAAAD2/xMAAgABAAAAAAD3//r/AgABAAAAAAD3//v/AgABAAAAAAD3//z/AgABAAAAAAD3//3/AgABAAAAAAD3//7/AgABAAAAAAD3////AgABAAAAAAD3/wAAAgABAAAAAAD3/wEAAgABAAAAAAD3/wIAAgABAAAAAAD3/wMAAgABAAAAAAD3/wQAAgABAAAAAAD3/wUAAgABAAAAAAD3/wYAAgABAAAAAAD3/wcAAgABAAAAAAD3/wgAAgABAAAAAAD3/wkAAgABAAAAAAD3/woAAgABAAAAAAD3/wsAAgABAAAAAAD3/wwAAgABAAAAAAD3/w0AAgABAAAAAAD3/w4AAgABAAAAAAD3/w8AAgABAAAAAAD3/xAAAgABAAAAAAD3/xEAAgABAAAAAAD3/xIAAgABAAAAAAD3/xMAAgABAAAAAAD4//r/AgABAAAAAAD4//v/AgABAAAAAAD4//z/AgABAAAAAAD4//3/AgABAAAAAAD4//7/AgABAAAAAAD4////AgABAAAAAAD4/wAAAgABAAAAAAD4/wEAAgABAAAAAAD4/wIAAgABAAAAAAD4/wMAAgABAAAAAAD4/wQAAgABAAAAAAD4/wUAAgABAAAAAAD4/wYAAgABAAAAAAD4/wcAAgABAAAAAAD4/wgAAgABAAAAAAD4/wkAAgABAAAAAAD4/woAAgABAAAAAAD4/wsAAgABAAAAAAD4/wwAAgABAAAAAAD4/w0AAgABAAAAAAD4/w4AAgABAAAAAAD4/w8AAgABAAAAAAD4/xAAAgABAAAAAAD4/xEAAgABAAAAAAD4/xIAAgABAAAAAAD4/xMAAgABAAAAAAD5//r/AgABAAAAAAD5//v/AgABAAAAAAD5//z/AgABAAAAAAD5//3/AgABAAAAAAD5//7/AgABAAAAAAD5////AgABAAAAAAD5/wAAAgABAAAAAAD5/wEAAgABAAAAAAD5/wIAAgABAAAAAAD5/wMAAgABAAAAAAD5/wQAAgABAAAAAAD5/wUAAgABAAAAAAD5/wYAAgABAAAAAAD5/wcAAgABAAAAAAD5/wgAAgABAAAAAAD5/wkAAgABAAAAAAD5/woAAgABAAAAAAD5/wsAAgABAAAAAAD5/wwAAgABAAAAAAD5/w0AAgABAAAAAAD5/w4AAgABAAAAAAD5/w8AAgABAAAAAAD5/xAAAgABAAAAAAD5/xEAAgABAAAAAAD5/xIAAgABAAAAAAD5/xMAAgABAAAAAAD6/xAAAgABAAAAAAD6/xEAAgABAAAAAAD6/xIAAgABAAAAAAD6/xMAAgABAAAAAAD7/xAAAgABAAAAAAD7/xEAAgABAAAAAAD7/xIAAgABAAAAAAD7/xMAAgABAAAAAAD8/xAAAgABAAAAAAD8/xEAAgABAAAAAAD8/xIAAgABAAAAAAD8/xMAAgABAAAAAAD9/xAAAgABAAAAAAD9/xEAAgABAAAAAAD9/xIAAgABAAAAAAD9/xMAAgABAAAAAAD+/xAAAgABAAAAAAD+/xEAAgABAAAAAAD+/xIAAgABAAAAAAD+/xMAAgABAAAAAAD//xAAAgABAAAAAAD//xEAAgABAAAAAAD//xIAAgABAAAAAAD//xMAAgABAAAAAAAAABAAAgABAAAAAAAAABEAAgABAAAAAAAAABIAAgABAAAAAAAAABMAAgABAAAAAAABABAAAgABAAAAAAABABEAAgABAAAAAAABABIAAgABAAAAAAABABMAAgABAAAAAAACABAAAgABAAAAAAACABEAAgABAAAAAAACABIAAgABAAAAAAACABMAAgABAAAAAAADABAAAgABAAAAAAADABEAAgABAAAAAAADABIAAgABAAAAAAADABMAAgABAAAAAAAEABAAAgABAAAAAAAEABEAAgABAAAAAAAEABIAAgABAAAAAAAEABMAAgABAAAAAAAFABAAAgABAAAAAAAFABEAAgABAAAAAAAFABIAAgABAAAAAAAFABMAAgABAAAAAAAGABAAAgABAAAAAAAGABEAAgABAAAAAAAGABIAAgABAAAAAAAGABMAAgABAAAAAAAHABAAAgABAAAAAAAHABEAAgABAAAAAAAHABIAAgABAAAAAAAHABMAAgABAAAAAAAIABAAAgABAAAAAAAIABEAAgABAAAAAAAIABIAAgABAAAAAAAIABMAAgABAAAAAAAJABAAAgABAAAAAAAJABEAAgABAAAAAAAJABIAAgABAAAAAAAJABMAAgABAAAAAAAKABAAAgABAAAAAAAKABEAAgABAAAAAAAKABIAAgABAAAAAAAKABMAAgABAAAAAAALABAAAgABAAAAAAALABEAAgABAAAAAAALABIAAgABAAAAAAALABMAAgABAAAAAAAMABAAAgABAAAAAAAMABEAAgABAAAAAAAMABIAAgABAAAAAAAMABMAAgABAAAAAAANABAAAgABAAAAAAANABEAAgABAAAAAAANABIAAgABAAAAAAANABMAAgABAAAAAAAOABAAAgABAAAAAAAOABEAAgABAAAAAAAOABIAAgABAAAAAAAOABMAAgABAAAAAAAPABAAAgABAAAAAAAPABEAAgABAAAAAAAPABIAAgABAAAAAAAPABMAAgABAAAAAAAQABAAAgABAAAAAAAQABEAAgABAAAAAAAQABIAAgABAAAAAAAQABMAAgABAAAAAAARABAAAgABAAAAAAARABEAAgABAAAAAAARABIAAgABAAAAAAARABMAAgABAAAAAAASABAAAgABAAAAAAASABEAAgABAAAAAAASABIAAgABAAAAAAASABMAAgABAAAAAAATABAAAgABAAAAAAATABEAAgABAAAAAAATABIAAgABAAAAAAATABMAAgABAAAAAAAUABAAAgABAAAAAAAUABEAAgABAAAAAAAUABIAAgABAAAAAAAUABMAAgABAAAAAAAVABAAAgABAAAAAAAVABEAAgABAAAAAAAVABIAAgABAAAAAAAVABMAAgABAAAAAAAWABAAAgABAAAAAAAWABEAAgABAAAAAAAWABIAAgABAAAAAAAWABMAAgABAAAAAAAXABAAAgABAAAAAAAXABEAAgABAAAAAAAXABIAAgABAAAAAAAXABMAAgABAAAAAAAYABAAAgABAAAAAAAYABEAAgABAAAAAAAYABIAAgABAAAAAAAYABMAAgABAAAAAAAZABAAAgABAAAAAAAZABEAAgABAAAAAAAZABIAAgABAAAAAAAZABMAAgABAAAAAAAaABAAAgABAAAAAAAaABEAAgABAAAAAAAaABIAAgABAAAAAAAaABMAAgABAAAAAAAbABAAAgABAAAAAAAbABEAAgABAAAAAAAbABIAAgABAAAAAAAbABMAAgABAAAAAAAcABAAAgABAAAAAAAcABEAAgABAAAAAAAcABIAAgABAAAAAAAcABMAAgABAAAAAAAZAPz/AgABAAAAAAAZAP3/AgABAAAAAAAZAP7/AgABAAAAAAAZAP//AgABAAAAAAAZAAAAAgABAAAAAAAZAAEAAgABAAAAAAAZAAIAAgABAAAAAAAZAAMAAgABAAAAAAAZAAQAAgABAAAAAAAZAAUAAgABAAAAAAAZAAYAAgABAAAAAAAZAAcAAgABAAAAAAAZAAgAAgABAAAAAAAZAAkAAgABAAAAAAAZAAoAAgABAAAAAAAZAAsAAgABAAAAAAAZAAwAAgABAAAAAAAZAA0AAgABAAAAAAAZAA4AAgABAAAAAAAZAA8AAgABAAAAAAAaAPz/AgABAAAAAAAaAP3/AgABAAAAAAAaAP7/AgABAAAAAAAaAP//AgABAAAAAAAaAAAAAgABAAAAAAAaAAEAAgABAAAAAAAaAAIAAgABAAAAAAAaAAMAAgABAAAAAAAaAAQAAgABAAAAAAAaAAUAAgABAAAAAAAaAAYAAgABAAAAAAAaAAcAAgABAAAAAAAaAAgAAgABAAAAAAAaAAkAAgABAAAAAAAaAAoAAgABAAAAAAAaAAsAAgABAAAAAAAaAAwAAgABAAAAAAAaAA0AAgABAAAAAAAaAA4AAgABAAAAAAAaAA8AAgABAAAAAAAbAPz/AgABAAAAAAAbAP3/AgABAAAAAAAbAP7/AgABAAAAAAAbAP//AgABAAAAAAAbAAAAAgABAAAAAAAbAAEAAgABAAAAAAAbAAIAAgABAAAAAAAbAAMAAgABAAAAAAAbAAQAAgABAAAAAAAbAAUAAgABAAAAAAAbAAYAAgABAAAAAAAbAAcAAgABAAAAAAAbAAgAAgABAAAAAAAbAAkAAgABAAAAAAAbAAoAAgABAAAAAAAbAAsAAgABAAAAAAAbAAwAAgABAAAAAAAbAA0AAgABAAAAAAAbAA4AAgABAAAAAAAbAA8AAgABAAAAAAAcAPz/AgABAAAAAAAcAP3/AgABAAAAAAAcAP7/AgABAAAAAAAcAP//AgABAAAAAAAcAAAAAgABAAAAAAAcAAEAAgABAAAAAAAcAAIAAgABAAAAAAAcAAMAAgABAAAAAAAcAAQAAgABAAAAAAAcAAUAAgABAAAAAAAcAAYAAgABAAAAAAAcAAcAAgABAAAAAAAcAAgAAgABAAAAAAAcAAkAAgABAAAAAAAcAAoAAgABAAAAAAAcAAsAAgABAAAAAAAcAAwAAgABAAAAAAAcAA0AAgABAAAAAAAcAA4AAgABAAAAAAAcAA8AAgABAAAAAAAZAPr/AgABAAAAAAAZAPv/AgABAAAAAAAaAPr/AgABAAAAAAAaAPv/AgABAAAAAAAbAPr/AgABAAAAAAAbAPv/AgABAAAAAAAcAPr/AgABAAAAAAAcAPv/AgABAAAAAAD6//r/AgABAAAAAAD6//v/AgABAAAAAAD6//z/AgABAAAAAAD6//3/AgABAAAAAAD7//r/AgABAAAAAAD7//v/AgABAAAAAAD7//z/AgABAAAAAAD7//3/AgABAAAAAAD8//r/AgABAAAAAAD8//v/AgABAAAAAAD8//z/AgABAAAAAAD8//3/AgABAAAAAAD9//r/AgABAAAAAAD9//v/AgABAAAAAAD9//z/AgABAAAAAAD9//3/AgABAAAAAAD+//r/AgABAAAAAAD+//v/AgABAAAAAAD+//z/AgABAAAAAAD+//3/AgABAAAAAAD///r/AgABAAAAAAD///v/AgABAAAAAAD///z/AgABAAAAAAD///3/AgABAAAAAAAAAPr/AgABAAAAAAAAAPv/AgABAAAAAAAAAPz/AgABAAAAAAAAAP3/AgABAAAAAAABAPr/AgABAAAAAAABAPv/AgABAAAAAAABAPz/AgABAAAAAAABAP3/AgABAAAAAAACAPr/AgABAAAAAAACAPv/AgABAAAAAAACAPz/AgABAAAAAAACAP3/AgABAAAAAAADAPr/AgABAAAAAAADAPv/AgABAAAAAAADAPz/AgABAAAAAAADAP3/AgABAAAAAAAEAPr/AgABAAAAAAAEAPv/AgABAAAAAAAEAPz/AgABAAAAAAAEAP3/AgABAAAAAAAFAPr/AgABAAAAAAAFAPv/AgABAAAAAAAFAPz/AgABAAAAAAAFAP3/AgABAAAAAAAGAPr/AgABAAAAAAAGAPv/AgABAAAAAAAGAPz/AgABAAAAAAAGAP3/AgABAAAAAAAHAPr/AgABAAAAAAAHAPv/AgABAAAAAAAHAPz/AgABAAAAAAAHAP3/AgABAAAAAAAIAPr/AgABAAAAAAAIAPv/AgABAAAAAAAIAPz/AgABAAAAAAAIAP3/AgABAAAAAAAJAPr/AgABAAAAAAAJAPv/AgABAAAAAAAJAPz/AgABAAAAAAAJAP3/AgABAAAAAAAKAPr/AgABAAAAAAAKAPv/AgABAAAAAAAKAPz/AgABAAAAAAAKAP3/AgABAAAAAAALAPr/AgABAAAAAAALAPv/AgABAAAAAAALAPz/AgABAAAAAAALAP3/AgABAAAAAAAMAPr/AgABAAAAAAAMAPv/AgABAAAAAAAMAPz/AgABAAAAAAAMAP3/AgABAAAAAAANAPr/AgABAAAAAAANAPv/AgABAAAAAAANAPz/AgABAAAAAAANAP3/AgABAAAAAAAOAPr/AgABAAAAAAAOAPv/AgABAAAAAAAOAPz/AgABAAAAAAAOAP3/AgABAAAAAAAPAPr/AgABAAAAAAAPAPv/AgABAAAAAAAPAPz/AgABAAAAAAAPAP3/AgABAAAAAAAQAPr/AgABAAAAAAAQAPv/AgABAAAAAAAQAPz/AgABAAAAAAAQAP3/AgABAAAAAAARAPr/AgABAAAAAAARAPv/AgABAAAAAAARAPz/AgABAAAAAAARAP3/AgABAAAAAAASAPr/AgABAAAAAAASAPv/AgABAAAAAAASAPz/AgABAAAAAAASAP3/AgABAAAAAAATAPr/AgABAAAAAAATAPv/AgABAAAAAAATAPz/AgABAAAAAAATAP3/AgABAAAAAAAUAPr/AgABAAAAAAAUAPv/AgABAAAAAAAUAPz/AgABAAAAAAAUAP3/AgABAAAAAAAVAPr/AgABAAAAAAAVAPv/AgABAAAAAAAVAPz/AgABAAAAAAAVAP3/AgABAAAAAAAWAPr/AgABAAAAAAAWAPv/AgABAAAAAAAWAPz/AgABAAAAAAAWAP3/AgABAAAAAAAXAPr/AgABAAAAAAAXAPv/AgABAAAAAAAXAPz/AgABAAAAAAAXAP3/AgABAAAAAAAYAPr/AgABAAAAAAAYAPv/AgABAAAAAAAYAPz/AgABAAAAAAAYAP3/AgABAAAAAAA=")
tile_set = ExtResource("2_nuju3")

[node name="UnitGrid" type="Node2D" parent="Map"]
script = ExtResource("3_52egx")

[node name="RangeDisplayGrid" type="Node2D" parent="Map"]

[node name="MovePathLine" type="Line2D" parent="Map"]
visible = false
z_index = -1
points = PackedVector2Array(0, 0, 0, 64, 0, 128, 64, 128, 64, 192)
width = 15.0
default_color = Color(0.218883, 0.720632, 0.998139, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="AttackPathLine" type="Line2D" parent="Map"]
visible = false
z_index = -1
points = PackedVector2Array(0, 0, 0, 64, 64, 64, 64, 128, 64, 192)
width = 15.0
default_color = Color(0.974682, 0.260834, 0.323698, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MapCursor" type="Sprite2D" parent="Map"]
scale = Vector2(1.28, 1.28)
texture = ExtResource("4_7qgnb")
script = ExtResource("5_ef3eq")

[node name="UnitPreviews" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -182.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32
alignment = 1

[node name="AlliedUnitPreview" parent="UnitPreviews" instance=ExtResource("13_cxd6n")]
layout_mode = 2

[node name="EnemyUnitPreview" parent="UnitPreviews" instance=ExtResource("13_cxd6n")]
z_index = 4
layout_direction = 3
layout_mode = 2

[node name="StatsVBoxContainer" parent="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer" index="1"]
layout_direction = 2

[node name="HealthBar" parent="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/HealthContainer" index="2"]
fill_mode = 0

[node name="EXPBar" parent="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/LevelContainer" index="2"]
fill_mode = 0

[node name="MoveSelectPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("moves_container")]
custom_minimum_size = Vector2(250, 500)
layout_mode = 2
offset_left = 43.0
offset_top = 557.0
offset_right = 293.0
offset_bottom = 1057.0
script = ExtResource("8_txwea")
moves_container = NodePath("MarginContainer/VBoxContainer")

[node name="MarginContainer" type="MarginContainer" parent="MoveSelectPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MoveSelectPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MoveOption" parent="MoveSelectPanel/MarginContainer/VBoxContainer" instance=ExtResource("9_dodco")]
layout_mode = 2

[node name="AttackWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="AttackWindow"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[editable path="UnitPreviews/EnemyUnitPreview"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow/ATKStatDisplay"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow/DEFStatDisplay"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow/RESStatDisplay"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow2/SPDStatDisplay"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow2/AGLStatDisplay"]
[editable path="UnitPreviews/EnemyUnitPreview/MarginContainer/HBoxContainer/StatsVBoxContainer/StatRow2/ACRStatDisplay"]
